# 3D_camera

DataProcessingTools/: NormalVectorCompute.py  convert_pth_to_pt_script.py  convert_pth_to_pt_trace.py  defog.py  ply2obj1.py  preview_during_training.py  rgb_to_sketch.py  test_ply2obj1.py
DataProcessingTools/3D2D_conversion/: convert_spherically_out_image_and_reverse.py  main_output_index_and_image_once.py  readme.md  requirements.txt  resize_image.py  rgb_to_gray.py
DataProcessingTools/add_nonobject_shadow_to_another_pic/: README.md  add_shadow_to_blank_model.py  get_shadow.py  main.py  obtain_object_than_delete.py  requirements.txt
DataProcessingTools/auto_run/: .gitignore  auto_run.py  send_mail.py
ReconstructionByCamera/CT2-2D/: README.md  readme_by_AID.md  requirements.txt  setup.py
ReconstructionByCamera/CloudTTSR-master/: .gitignore  README.md  cloudreader.py  eval.sh  infer.sh  main.py  option.py  test.sh  train.sh  trainer.py  utils.py
ReconstructionByCamera/StyTR-2/: environment.yml  function.py  readme.md  readme_by_AID.md  requirements.txt  sampler.py  save_loss2txt.py  test.py  test.sh  train.py  train.sh
ReconstructionByCamera/TTSR-master/: .gitignore  environment.yml  eval.sh  main.py  option.py  readme_by_AID.md  test.sh  train.sh  trainer.py  utils.py
ReconstructionByCamera/coltran_obj_pcd/: custom_colorize.py  custom_colorize.sh  datasets.py  run.py  (+7 more)
ReconstructionByCamera/image_color/: .gitignore  CMakeLists.txt
ReconstructionByCamera/image_color/include/: image_color.h
ReconstructionByCamera/image_color/source/: image_color.cpp
(+109 files in other folders)
